k8s/apps/actual-budget/resources/pvc.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  nodeName: stack-agent-02
  volumes:
    - name: new-volume
      persistentVolumeClaim:
        claimName: new-volume
  containers:
    - name: my-container
      image: busybox
      command: ['sleep', '3600']
      volumeMounts:
        - name: new-volume
          mountPath: /mnt/new-volume
